# HykoEngine2D

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
res/Shaders/: FBOPostProcess.frag  FBOPostProcess.vert  basicPrimitiveFragmentShader.frag  basicPrimitiveVertexShader.vert
src/: GameMain.cpp  dddd
src/Runtime/: CMakeLists.txt  Hyko.h
src/Runtime/API/Events/: Events.h
src/Runtime/API/Events/Input/: InputModule.cpp  InputModule.h
src/Runtime/API/GameWindow/: GameWindowAPI.h
src/Runtime/Core/: Application.cpp  Application.h  Input.h
src/Runtime/Core/UUID/: UUID.cpp  UUID.h
src/Runtime/Events/: Events.h
src/Runtime/Math/Matrix/: MatrixTransform.cpp  MatrixTransform.h
src/Runtime/Platform/: GL.cpp  GL.h
src/Runtime/Platform/Buffers/GL/: SSBManager.cpp  SSBManager.h
src/Runtime/Platform/Buffers/GL/EBO/: EBO.cpp  EBO.h
src/Runtime/Platform/Buffers/GL/FBO/: FBO.cpp  FBO.h
src/Runtime/Platform/Buffers/GL/RBO/: RBO.cpp  RBO.h
src/Runtime/Platform/Buffers/GL/RendererObjects/: ROs.h
src/Runtime/Platform/Buffers/GL/SSBO/: SSBO.cpp  SSBO.h
src/Runtime/Platform/Buffers/GL/VAO/: VAO.cpp  VAO.h
src/Runtime/Platform/Buffers/GL/VBO/: VBO.cpp  VBO.h
src/Runtime/Platform/ShaderTools/: Shader.cpp  Shader.h
src/Runtime/Platform/Tools/DLL/: DLLLink.h
src/Runtime/Renderer/: Renderer.cpp  Renderer.h
src/Runtime/Renderer/Material/: Material.h
src/Runtime/Renderer/Texture/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Runtime/Renderer/UV/: UV.h
src/Runtime/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Runtime/Scene/Entity/: Entity.cpp  Entity.h
src/Runtime/Scene/Entity/Components/: CameraComponent.h  IDComponent.h  LayerComponent.h  Primitive.h  SpriteComponent.h  TransformComponent.h
src/Runtime/Tools/: Sys.cpp  Sys.h
src/Runtime/Window/: GameWindow.cpp  GameWindow.h
